# politipy

./: pyproject.toml
src/politipy/: __init__.py
src/politipy/us/: __init__.py  locations.py
