[project]
name = "politipy"
version = "0.1.1"
description = "A python library for accessing block-level us census data."
readme = "README.md"
authors = [
  { name="Keyan Gootkin", email="keyangootkin@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pygris>=0.2.1",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
